# ingestion_framework

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  tasks.md
src/: decorators.py  exceptions.py
src/actions/: base.py  example.py
src/clients/: base.py  filesystem.py  sharepoint.py
src/config/: app.yaml  test.yaml
src/contexts/: base.py  client.py  pipeline.py
src/formats/: msg.py
src/pipeline/: database.py  errors.py  log.py  pipeline.py
