[tool.poetry]
name = "ingestion-framework"
version = "0.1.0"
description = ""
authors = ["RaymondOnn <raymondonn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dateutil = "^2.9.0.post0"
duckdb = "^1.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
